<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.day26.MainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/day26_b1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day26_b1" />

            <Button
                android:id="@+id/day26_b2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day26_b2" />

            <Button
                android:id="@+id/day26_b3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day26_b3" />

            <Button
                android:id="@+id/day26_b4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day26_b4" />

            <Button
                android:id="@+id/day26_b5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day26_b5" />

            <Button
                android:id="@+id/day26_b6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day26_b6" />

            <Button
                android:id="@+id/day26_b7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day26_b7" />

            <Button
                android:id="@+id/day26_b8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day26_b8" />

            <Button
                android:id="@+id/day26_b9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day26_b9" />

            <Button
                android:id="@+id/day26_b10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day26_b10" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>