<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/day26_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/day26_username" />

    <EditText
        android:id="@+id/day26_userpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/day26_userpassword"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/day26_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day26_checkbox" />

        <Button
            android:id="@+id/day26_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day26_login" />
    </LinearLayout>

</LinearLayout>