<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/day26_visit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/day26_visit1" />

    <Button
        android:id="@+id/day26_visit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/day26_visit2" />

    <Button
        android:id="@+id/day26_visit3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/day26_visit3" />

</LinearLayout>